force-app/main/default/objects/integrator_da__Connection__c/integrator_da__Connection__c.object-meta.xml
<CustomObject>
    <label>Connection</label>
    <nameField>
        <displayFormat>CONN-{0}</displayFormat>
        <label>Connection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Connections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>