force-app/main/default/objects/integrator_da__Connection__c/fields/integrator_da__Access_Token__c.field-meta.xml
<CustomField>
    <fullName>integrator_da__Access_Token__c</fullName>
    <label>Access Token</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>