force-app/main/default/objects/integrator_da__Connection__c/fields/integrator_da__Consumer_Secret__c.field-meta.xml
<CustomField>
    <fullName>integrator_da__Consumer_Secret__c</fullName>
    <label>Consumer Secret</label>
    <length>128</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>