force-app/main/default/objects/integrator_da__Connection__c/fields/integrator_da__Endpoint__c.field-meta.xml
<CustomField>
    <fullName>integrator_da__Endpoint__c</fullName>
    <label>Endpoint</label>
    <required>true</required>
    <type>Url</type>
</CustomField>